# send_email_celery

./: Dockerfile  README.md  celery_worker.py  docker-compose.yml  pyproject.toml
app/: main.py  tasks.py
